// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserList UserList renders the component 1`] = `
<FlatList
  data={
    Array [
      Object {
        "address": Object {
          "city": "Gwenborough",
          "geo": Object {
            "lat": "-37.3159",
            "lng": "81.1496",
          },
          "street": "Kulas Light",
          "suite": "Apt. 556",
          "zipcode": "92998-3874",
        },
        "company": Object {
          "bs": "harness real-time e-markets",
          "catchPhrase": "Multi-layered client-server neural-net",
          "name": "Romaguera-Crona",
        },
        "email": "Sincere@april.biz",
        "id": 1,
        "name": "Leanne Graham",
        "phone": "1-770-736-8031 x56442",
        "username": "Bret",
        "website": "hildegard.org",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`UserList renderItem renders the component 1`] = `
<Component
  lastChild={false}
  style={
    Array [
      Object {
        "borderColor": "#333",
        "borderRadius": 4,
        "borderStyle": "solid",
        "borderWidth": 2,
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 8,
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
      },
      undefined,
    ]
  }
>
  <Styled(Text)
    testID="user-row-text-0"
  >
    Bret &lt;Leanne Graham&gt;
  </Styled(Text)>
  <Styled(TouchableHighlight)
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Details
    </Text>
  </Styled(TouchableHighlight)>
</Component>
`;

exports[`UserList renderItem renders the component as the last child 1`] = `
<Component
  lastChild={true}
  style={
    Array [
      Object {
        "borderColor": "#333",
        "borderRadius": 4,
        "borderStyle": "solid",
        "borderWidth": 2,
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 0,
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
      },
      undefined,
    ]
  }
>
  <Styled(Text)
    testID="user-row-text-0"
  >
    Bret &lt;Leanne Graham&gt;
  </Styled(Text)>
  <Styled(TouchableHighlight)
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Details
    </Text>
  </Styled(TouchableHighlight)>
</Component>
`;
